css/custom.css
.home-but-link:hover {
  z-index: 11;
}

.head-event-image_mob {
  display: none;
}

.whats-on-dragging {
  overflow: hidden;
}

[property='itemListElement'] *:first-child {
  color: #7a7a78;
  font-size: 12rem;
  line-height: 25rem;
  letter-spacing: 0.05em;
  text-decoration: none;
  text-transform: uppercase;
}

.show-all-btn {
  background-color: transparent;
}

#tickets,
#tickets:focus {
  outline: none;
}

.curtain {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100vw;
  height: 110vh;
  z-index: 2;
}

.breadcrumbs-line {
  align-items: center;
}

.breadcrumbs-line > span {
  margin-right: 5px;
  margin-left: 5px;
}

.breadcrumbs-line > span:first-child {
  margin-left: 0;
}

.breadcrumbs-line > span:last-child {
  margin-right: 0;
}

.link-foo-big.w--current,
.link-foo-small.w--current {
  color: #b0935b !important;
}

#atcb-pos-wrapper {
  display: none;
}

.wo-slider .link-block {
  transform: translateZ(0);
}

.wo-slide__image {
  width: 100%;
  height: 100%;
  user-select: none;
  -webkit-user-select: none;
  -webkit-user-drag: none;
}

.slider-wvwnts_bottom {
  cursor: auto;
  -webkit-user-drag: none;
  user-select: none;
  -webkit-user-select: none;
}

.p-30-45 {
  text-decoration: none;
}

.p-20-30.title-event {
  text-decoration: none;
}

.progress {
  cursor: pointer;
}

.progress--hover {
  height: 6rem;
}

.map-embe iframe {
  width: 100%;
}

.p-20-30.w20 {
  text-decoration: none;
}

.splide {
  cursor: none;
  position: relative;
}

.splide__list {
  cursor: none;
}

.splide__cursor {
  position: absolute;
  top: 0;
  left: 0;
  width: 80rem;
  height: 80rem;
  background-image: url('../images/swipe-control.svg');
  background-repeat: no-repeat;
  background-size: contain;
  pointer-events: none;
  opacity: 0;
  cursor: none;
  transition: opacity 0.2s ease-in-out;
}

.slider-wvwnts-home {
  position: relative;
  cursor: none;
}

#w-node-f68b1e07-4cf2-4c60-76f8-48cbef9b803c-89261594 {
  position: relative;
}

.cursor {
  position: absolute;
}

.custom-cursor--active {
  opacity: 1;
  z-index: 10;
}

[data-type='cursor'] {
  pointer-events: none;
}

.bech-slider {
  width: 100%;
  position: relative;
  cursor: url('../images/book-tickets-cursor.svg'), auto;
}

.bech-slider__slides {
  width: 100%;
  height: 915rem;
  position: relative;
}

.bech-slider__slide {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  opacity: 0;
  /*transition: opacity 0.4s ease-in-out;*/
}

.bech-slider__slide--active {
  z-index: 2;
  opacity: 1;
}

.bech-slider__slide .head-event-content {
  height: 100%;
  /*cursor: url("/wp-content/themes/bechstein/images/book-tickets-cursor.svg"), auto;*/
}

.bech-slider__controls {
  position: absolute;
  right: 40rem;
  bottom: 40rem;
  color: #ffffff;
  z-index: 9;
}

.bech-slider__counter {
  margin-right: auto;
  margin-bottom: 13rem;
  margin-left: auto;
  width: 100%;
  max-width: 35rem;
  display: flex;
  justify-content: space-between;
  font-size: 15rem;
  line-height: 30rem;
}

.arrow-button {
  position: relative;
  width: 50rem;
  height: 50rem;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid #ffffff;
  color: #ffffff;
  font-size: 20rem;
  background: transparent;
  cursor: pointer;
}

.arrow-button svg {
  position: absolute;
  top: 0;
  left: 0;
}

.arrow-button svg circle {
  stroke-dashoffset: 0;
  stroke: transparent;
  stroke-width: 2rem;
}

.arrow-button svg .arrow-button__progress {
  stroke-dashoffset: 150.796447372;
  stroke: #ffffff;
  transform: rotate(-90deg);
  transform-origin: center;
}

.body--freeze {
  overflow: hidden;
}

.loader {
  opacity: 0;
  transition: opacity 0.4s ease-in-out;
}

.loader--active {
  display: block;
  position: fixed;
}

#user-actions {
  display: flex;
  flex-direction: column;
}

[data-type='cursor-area'] {
  cursor: none;
}

.book-pseudo-b {
  transform: none;
  z-index: 9;
}

/* Page.php sidebar */
.widget {
  list-style: none;
}
.widget_bech_repeater_links_widget {
  display: flex;
  flex-direction: column;
}

.page-sidebar-block {
  margin-bottom: 58rem;
}

.page-sidebar-block:last-child {
  margin-bottom: 0;
}

.p-30-40.med.w35 + .page-sidebar-block__content {
  margin-top: 28rem;
}

.p-20-30.med.w20::after {
  margin-left: 5rem;
}

.ui-yourvisit_link-in {
  margin-top: 0 !important;
  margin-bottom: 26rem;
}

.ui-yourvisit_link-in:last-child {
  margin-bottom: 0;
}

.small-text-content,
.small-text-content * {
  color: #030e14;
  font-size: 20rem;
  line-height: 30rem;
  text-decoration: none;
}

.small-text-content a {
  transition: color 0.2s ease-in-out;
}

.small-text-content a:hover,
.small-text-content a:focus {
  color: #dcca99;
}

/* Page.php sidebar */

[property='itemListElement']:last-child a.breadcrumbs-link:after {
  display: none;
}

html {
  font-size: 1px;
}

.booktickets-btn.sold-out {
  pointer-events: none;
}

.yourvisit-column .ui-boxoffice-block:nth-child(1) .t-line {
  display: none;
}

.tmp3 .yourvisit-column .ui-boxoffice-block:nth-child(1) {
  padding-top: 0px;
}

.grey-z,
.white-z {
  top: calc(100vh - 80rem);
}

.images-grid a:nth-child(1) {
}

.images-grid a:nth-child(6n + 1) {
  -ms-grid-column: span 3 !important;
  grid-column-start: span 3 !important;
  -ms-grid-column-span: 3 !important;
  grid-column-end: span 3 !important;
  -ms-grid-row: span 1;
  grid-row-start: span 1;
  -ms-grid-row-span: 1;
  grid-row-end: span 1;
}

.images-grid a:nth-child(6n + 2) {
  -ms-grid-column: span 2 !important;
  grid-column-start: span 2 !important;
  -ms-grid-column-span: 2 !important;
  grid-column-end: span 2 !important;
  -ms-grid-row: span 1;
  grid-row-start: span 1;
  -ms-grid-row-span: 1;
  grid-row-end: span 1;
}

.b-line {
  transition: all 300ms ease;
}

.body.menuopen .b-line:nth-child(1) {
  transform: rotate(45deg) translateY(15rem) translateX(12.5rem);
  transform-origin: 50% 50%;
}

.body.menuopen .b-line:nth-child(2) {
  opacity: 0;
}
/* ... */

